--- a/novice.css
+++ b/novice.css
@@ -6,7 +6,7 @@ body {
 .navbar {
     text-align: center;
     background: rgba(255,255,255,0.8);
-    margin: 0 0 0 40px;
+    margin: 0 40px 0 40px;
 }
 
 .box {
