--- a/novice.css
+++ b/novice.css
@@ -5,8 +5,8 @@ body {
 
 .navbar {
     text-align: center;
-    background: rgba(255,255,255,0.8);
-    margin: 0 40px 0 40px;
+    /*background: rgba(255,255,255,0.8);*/
+    /*margin: 0 40px 0 40px;*/
 }
 
 .box {
