Remove hyperlink underline

--- a/novice.css
+++ b/novice.css
@@ -5,6 +5,7 @@ body {
 
 .navbar {
     text-align: center;
+    text-decoration: none;
     /*background: rgba(255,255,255,0.8);*/
     /*margin: 0 40px 0 40px;*/
 }
