--- a/novice.css
+++ b/novice.css
@@ -5,7 +5,6 @@ body {
 
 .navbar {
     text-align: center;
-    text-decoration: none;
     /*background: rgba(255,255,255,0.8);*/
     /*margin: 0 40px 0 40px;*/
 }
@@ -26,6 +25,7 @@ body {
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
+  text-decoration: none; /*KAM added*/
   white-space: nowrap;
   vertical-align: middle;
   -ms-touch-action: manipulation;
