--- a/novice.css
+++ b/novice.css
@@ -336,3 +336,17 @@ textarea.form-control {
 .form-group:after {
   clear: both;
 }
+
+
+/*Colors from http://htmlcolorcodes.com/color-picker/*/
+/*@green5: #165123;*/
+/*@green8: #0b2912;*/
+/*@green2: #c5d4c8;*/
+/*@purple5: #511644;*/
+/*@purple8: */
+/*@purple2: #d4c5d0;*/
+
+
+
+
+
